k8s/apps/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msvc-gateway
spec:
  type: ClusterIP  # <--- CAMBIA ESTO
  selector:
    app: msvc-gateway
  ports:
    - port: 8081
      targetPort: 8081
