k8s/apps/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msvc-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api-gateway
        pathType: Prefix
        backend:
          service:
            name: msvc-gateway
            port:
              number: 80
